--- a/style.css
+++ b/style.css
@@ -7,9 +7,15 @@ body {
     background-color: #f0f0f0;
 }
 
+.list-text {
+    font-size: 18px;
+    line-height: 1.6;
+    color: #333;
+}
+
 .login-container {
-    padding: 20px;
-    border-radius: 8px;
+    padding: 75px;
+    border-radius: 40px;
     background-color: white;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
